--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
     "@angular/platform-browser": "~9.1.3",
     "@angular/platform-browser-dynamic": "~9.1.3",
     "@angular/router": "~9.1.3",
+    "@ionic/angular": "^5.0.7",
+    "@ionic/storage": "^2.2.0",
+    "@uoa/auth": "0.0.2",
+    "@uoa/error-pages": "0.0.5",
+    "crypto-js": "^4.0.0",
+    "ngx-take-until-destroy": "^5.4.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
