--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
     "@angular/platform-browser-dynamic": "~9.1.3",
     "@angular/router": "~9.1.3",
     "@ionic/angular": "^5.0.7",
-    "@ionic/storage": "^2.2.0",
-    "@uoa/auth": "0.0.2",
-    "@uoa/error-pages": "0.0.5",
     "crypto-js": "^4.0.0",
     "ngx-take-until-destroy": "^5.4.0",
+    "ngx-webstorage-service": "^4.1.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
+    "uoa-auth-angular": "0.0.1",
+    "uoa-error-pages-angular": "0.0.1",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
