--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~9.1.3",
     "@angular/platform-browser-dynamic": "~9.1.3",
     "@angular/router": "~9.1.3",
+    "apollo-angular": "^1.9.1",
     "crypto-js": "^4.0.0",
     "ngx-take-until-destroy": "^5.4.0",
     "ngx-webstorage-service": "^4.1.0",
@@ -28,7 +29,13 @@
     "tslib": "^1.10.0",
     "uoa-auth-angular": "0.0.1",
     "uoa-error-pages-angular": "0.0.1",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "apollo-angular-link-http": "^1.10.0",
+    "apollo-link": "^1.2.11",
+    "apollo-client": "^2.6.0",
+    "apollo-cache-inmemory": "^1.6.0",
+    "graphql-tag": "^2.10.0",
+    "graphql": "^14.6.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.3",
