add env files and update angular.json

--- a/angular.json
+++ b/angular.json
@@ -60,6 +60,42 @@
                   "maximumError": "10kb"
                 }
               ]
+            },
+            "nonprod": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.nonprod.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb",
+                  "maximumError": "10kb"
+                }
+              ]
+            },
+            "sandbox": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.sandbox.ts"
+                }
+              ]
             }
           }
         },
@@ -71,6 +107,12 @@
           "configurations": {
             "production": {
               "browserTarget": "dashboard-ui:build:production"
+            },
+            "nonprod": {
+              "browserTarget": "dashboard-ui:build:nonprod"
+            },
+            "sandbox": {
+              "browserTarget": "dashboard-ui:build:sandbox"
             }
           }
         },
@@ -123,6 +165,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "dashboard-ui"
 }
