--- a/package.json
+++ b/package.json
@@ -22,30 +22,28 @@
     "@angular/platform-browser": "~9.1.3",
     "@angular/platform-browser-dynamic": "~9.1.3",
     "@angular/router": "~9.1.3",
+    "@uoa/auth": "^0.2.0",
+    "@uoa/error-pages": "0.0.7",
     "apollo-angular": "^1.9.1",
-    "crypto-js": "^4.0.0",
-    "ngx-take-until-destroy": "^5.4.0",
-    "ngx-webstorage-service": "^4.1.0",
+    "apollo-angular-link-http": "^1.10.0",
+    "apollo-cache-inmemory": "^1.6.0",
+    "apollo-client": "^2.6.0",
+    "apollo-link": "^1.2.11",
+    "graphql": "^14.6.0",
+    "graphql-tag": "^2.10.0",
+    "localforage": "^1.7.4",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "uoa-auth-angular": "0.0.1",
-    "uoa-error-pages-angular": "0.0.1",
-    "zone.js": "~0.10.2",
-    "apollo-angular-link-http": "^1.10.0",
-    "apollo-link": "^1.2.11",
-    "apollo-client": "^2.6.0",
-    "apollo-cache-inmemory": "^1.6.0",
-    "graphql-tag": "^2.10.0",
-    "graphql": "^14.6.0"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.3",
+    "@angular-devkit/build-angular": "^0.1000.1",
     "@angular/cli": "~9.1.3",
     "@angular/compiler-cli": "~9.1.3",
     "@angular/language-service": "~9.1.3",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
