--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "apollo-cache-inmemory": "^1.6.0",
     "apollo-client": "^2.6.0",
     "apollo-link": "^1.2.11",
+    "date-fns": "^2.14.0",
     "graphql": "^14.6.0",
     "graphql-tag": "^2.10.0",
     "localforage": "^1.7.4",
