--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,24 @@
       "es2018",
       "dom",
       "esnext.asynciterable"
-    ]
+    ],
+    "paths": {
+      "@app/*": [
+        "src/app/core/*"
+      ],
+      "@shared/*": [
+        "src/app/shared/*"
+      ],
+      "@env": [
+        "src/environments/environment"
+      ],
+      "@modules/*": [
+        "src/app/modules/*"
+      ],
+      "@data/*": [
+        "src/app/data/*"
+      ]
+    }
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
