refactoring to align with angular folder structure

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,9 @@
       ],
       "@data/*": [
         "src/app/data/*"
+      ],
+      "@layout/*": [
+        "src/app/layout/*"
       ]
     }
   },
