add e2e tests for protected pages, add pre-test login in onPrepare() method in protractor config, update to help page test spec

--- a/angular.json
+++ b/angular.json
@@ -158,8 +158,9 @@
             "devServerTarget": "dashboard-ui:serve"
           },
           "configurations": {
-            "production": {
-              "devServerTarget": "dashboard-ui:serve:production"
+            "test": {
+              "devServerTarget": "dashboard-ui:serve:nonprod",
+              "baseUrl": "<NON-PROD/TEST BASE URL>"
             }
           }
         }
