--- a/angular.json
+++ b/angular.json
@@ -147,7 +147,8 @@
               "e2e/tsconfig.json"
             ],
             "exclude": [
-              "**/node_modules/**"
+              "**/node_modules/**",
+              "**/e2e/**"
             ]
           }
         },
