--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,12 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "allowedCommonJsDependencies": [
+              "graphql-tag",
+              "crypto-js",
+              "zen-observable"
+            ]
           },
           "configurations": {
             "production": {
