--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "@angular/platform-browser": "~10.0.9",
     "@angular/platform-browser-dynamic": "~10.0.9",
     "@angular/router": "~10.0.9",
-    "@uoa/auth": "^0.2.0",
-    "@uoa/error-pages": "0.0.7",
+    "@uoa/auth": "^0.3.0",
+    "@uoa/error-pages": "^0.1.0",
     "apollo-angular": "^1.9.1",
     "apollo-angular-link-http": "^1.10.0",
     "apollo-cache-inmemory": "^1.6.0",
