--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,6 @@ speed-measure-plugin*.json
 # misc
 /.sass-cache
 /connect.lock
-/coverage
 /libpeerconnection.log
 npm-debug.log
 yarn-error.log
@@ -49,3 +48,8 @@ Thumbs.db
 # Tests
 local.log
 debug.log
+/coverage
+cypress/fixtures/example.json
+cypress/integration/examples
+cypress/videos
+cypress/screenshots
